--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,29 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Tushar Mehta
+avatar: /static/images/tushar.jpeg
+occupation: Content and Social Media Manager 
+company: Flexiple
+email: tusharmehta2001@icloud.com
+twitter: https://twitter.com/tushaarmehtaa
+linkedin: https://www.linkedin.com/in/tushaarmehtaa/
+substack: https://substack.com/@tusharmehta?utm_source=profile-page
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+I’m Tushar, a multi-genre writer embracing the messy journey of creation.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+My professional path started early as soon as I entered college.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Which led to varied gigs – part-time collaborations, NGO work, internships and lastly got a generalist role for $50 monthly.
+
+That was 3 years ago. Now, I refine brand narratives across social media.
+
+Currently:
+
+- Leading content marketing for [Buildd](https://buildd.co/)
+- Formerly managed [Purple Pay](https://x.com/purplepayapp?s=21&t=blFbEqgYvEn7OKOd5e_F0w)’s digital presence
+- Written blogs for [Dezerv](https://www.dezerv.in/)
+- Previously worked as a marketing generalist for OWLED, where it all started
+
+When not working on my day-job or with clients, you'll find me working on my passion projects – my Podcast [Decoded](https://x.com/podcastdecoded_?s=21&t=blFbEqgYvEn7OKOd5e_F0w) page, an upcoming [newsletter](https://substack.com/@tusharmehta), or just being active on [Twitter](https://x.com/tushaarmehtaa/status/1738942170357531015?s=46&t=blFbEqgYvEn7OKOd5e_F0w).
+
+If my work resonates, let's connect! I promise an experience beyond delivering projects – together, we can create stories that emotionally impact audiences.
