--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -22,8 +22,8 @@ Currently:
 - Leading content marketing for [Buildd](https://buildd.co/)
 - Formerly managed [Purple Pay](https://x.com/purplepayapp?s=21&t=blFbEqgYvEn7OKOd5e_F0w)’s digital presence
 - Written blogs for [Dezerv](https://www.dezerv.in/)
-- Previously worked as a marketing generalist for OWLED, where it all started
+- Previously worked as a marketing generalist for [OWLED](https://www.owledmedia.com), where it all started
 
-When not working on my day-job or with clients, you'll find me working on my passion projects – my Podcast [Decoded](https://x.com/podcastdecoded_?s=21&t=blFbEqgYvEn7OKOd5e_F0w) page, an upcoming [newsletter](https://substack.com/@tusharmehta), or just being active on [Twitter](https://x.com/tushaarmehtaa/status/1738942170357531015?s=46&t=blFbEqgYvEn7OKOd5e_F0w).
+When not working on my day-job or with clients, you'll find me working on my passion projects – my [Podcast Decoded](https://x.com/podcastdecoded_?s=21&t=blFbEqgYvEn7OKOd5e_F0w) page, an upcoming [newsletter](https://substack.com/@tusharmehta), or just being active on [Twitter](https://x.com/tushaarmehtaa/status/1738942170357531015?s=46&t=blFbEqgYvEn7OKOd5e_F0w).
 
 If my work resonates, let's connect! I promise an experience beyond delivering projects – together, we can create stories that emotionally impact audiences.
